--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background-color: lightblue;
+    background-color: darkred;
   }
   
   h1 {
@@ -21,3 +21,15 @@ body {
     font-family: verdana;
     font-size: 20px;
   }
+
+  #para1 {
+    text-align: center;
+    color: red;
+  }
+
+  .center {
+    text-align: center;
+    color: red;
+  }
+
+  
